--- a/admin.html
+++ b/admin.html
@@ -17,11 +17,11 @@
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
-  <body class="font-poppins bg-white text-gray-800 flex min-h-screen">
+  <body class="font-poppins bg-white text-gray-800 flex min-h-screen text-[15px] md:text-base">
     <!-- Sidebar -->
-    <aside class="w-64 bg-gradient-to-b from-blue-900 to-blue-600 text-white flex flex-col py-8 px-6 min-h-screen shadow-lg">
+  <aside id="sidebar" class="w-64 bg-gradient-to-b from-gray-800 to-gray-600 text-white flex flex-col py-8 px-6 min-h-screen shadow-lg fixed md:static inset-y-0 left-0 transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50 rounded-r-2xl md:rounded-none">
       <div class="flex flex-col items-center mb-10">
-        <img src="assets/logo.png" class="h-24 mb-4 drop-shadow-lg" alt="Logo">
+  <img src="assets/Logo.png" class="h-28 mb-4 drop-shadow-lg" alt="Logo">
         <span class="font-extrabold text-xl tracking-wide">Bafoto Admin</span>
       </div>
       <nav class="flex-1">
@@ -34,28 +34,34 @@
       </nav>
       <div class="mt-10 text-xs text-blue-100 text-center">&copy; 2025 Bafoto Booth</div>
     </aside>
+    <div id="sidebar-overlay" class="fixed inset-0 bg-black/40 hidden md:hidden z-40"></div>
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col min-h-screen bg-blue-50">
-      <header id="dashboard" class="bg-white shadow flex flex-col md:flex-row md:items-center px-8 h-auto md:h-20 border-b-2 border-primary gap-4 md:gap-0">
+    <div class="flex-1 flex flex-col min-h-screen bg-gray-50 md:ml-64">
+      <header id="dashboard" class="bg-white shadow flex flex-col md:flex-row md:items-center px-4 md:px-8 h-auto md:h-20 border-b-2 border-gray-200 gap-4 md:gap-0 rounded-b-2xl md:rounded-none">
+        <button id="sidebar-toggle" class="md:hidden inline-flex items-center justify-center p-2 rounded border border-primary text-primary hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Toggle sidebar">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
         <div class="flex-1 flex flex-col md:flex-row md:items-center gap-2 md:gap-0">
           <h1 class="text-3xl font-extrabold text-primary drop-shadow md:mr-8">Dashboard Admin</h1>
           <div id="dashboard-info" class="flex gap-6 text-lg font-semibold text-blue-900"></div>
         </div>
         <div id="dashboard-paket" class="flex flex-wrap gap-4"></div>
       </header>
-      <main class="flex-grow px-8 py-10">
-        <section class="bg-white rounded-2xl shadow-xl border border-blue-100 p-8">
+      <main class="flex-grow px-4 md:px-8 py-6 md:py-10">
+        <section class="bg-white rounded-2xl shadow-xl border border-blue-100 p-4 md:p-8">
           <h2 class="text-2xl font-bold mb-6 text-primary">Rekap Event & Pendapatan</h2>
           <div class="overflow-x-auto">
-            <table class="w-full text-left border-collapse">
+            <table class="w-full text-left border-collapse text-sm md:text-base">
               <thead>
                 <tr>
-                  <th class="py-2 px-3 border-b">Event</th>
-                  <th class="py-2 px-3 border-b">Email</th>
-                  <th class="py-2 px-3 border-b">Paket</th>
-                  <th class="py-2 px-3 border-b">Harga</th>
-                  <th class="py-2 px-3 border-b">Jumlah Foto</th>
-                  <th class="py-2 px-3 border-b">Pendapatan</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Event</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Email</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Paket</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Harga</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Jumlah Foto</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Pendapatan</th>
                 </tr>
               </thead>
               <tbody id="recap-list">
@@ -63,8 +69,8 @@
               </tbody>
               <tfoot>
                 <tr>
-                  <td colspan="5" class="py-2 px-3 font-bold text-right">Total Pendapatan</td>
-                  <td class="py-2 px-3 font-extrabold text-primary" id="recap-total">Rp0</td>
+                  <td colspan="5" class="py-3 px-3 font-bold text-right">Total Pendapatan</td>
+                  <td class="py-3 px-3 font-extrabold text-primary" id="recap-total">Rp0</td>
                 </tr>
               </tfoot>
             </table>
@@ -85,22 +91,24 @@
       function renderEvents() {
         const events = getEvents();
         const tbody = document.getElementById('event-list');
-        tbody.innerHTML = '';
-        events.forEach((ev, idx) => {
-          const tr = document.createElement('tr');
-          tr.className = 'hover:bg-blue-50';
-          tr.innerHTML = `
-            <td class="py-2 px-3">${ev.name}</td>
-            <td class="py-2 px-3">${ev.email}</td>
-            <td class="py-2 px-3">${ev.token}</td>
-            <td class="py-2 px-3">${ev.photos.length}</td>
-            <td class="py-2 px-3">
-              <button class="text-primary hover:underline" data-action="lihat" data-idx="${idx}">Lihat</button>
-              <button class="text-red-600 hover:underline ml-2" data-action="hapus" data-idx="${idx}">Hapus</button>
-            </td>
-          `;
-          tbody.appendChild(tr);
-        });
+        if (tbody) {
+          tbody.innerHTML = '';
+          events.forEach((ev, idx) => {
+            const tr = document.createElement('tr');
+            tr.className = 'hover:bg-blue-50';
+            tr.innerHTML = `
+              <td class="py-2 px-3">${ev.name}</td>
+              <td class="py-2 px-3">${ev.email}</td>
+              <td class="py-2 px-3">${ev.token}</td>
+              <td class="py-2 px-3">${ev.photos.length}</td>
+              <td class="py-2 px-3">
+                <button class="text-primary hover:underline" data-action="lihat" data-idx="${idx}">Lihat</button>
+                <button class="text-red-600 hover:underline ml-2" data-action="hapus" data-idx="${idx}">Hapus</button>
+              </td>
+            `;
+            tbody.appendChild(tr);
+          });
+        }
         renderDashboardInfo();
       }
       function deleteEvent(idx) {
@@ -144,7 +152,7 @@
         </div>`;
         document.getElementById('dashboard-paket').innerHTML = html;
 
-        // Recap table
+        // Recap table (mobile-friendly with inline labels)
         const recapTbody = document.getElementById('recap-list');
         if(recapTbody) {
           recapTbody.innerHTML = '';
@@ -155,13 +163,31 @@
             const pendapatan = harga;
             recapTotal += pendapatan;
             recapTbody.innerHTML += `
-              <tr>
-                <td class="py-2 px-3">${ev.name}</td>
-                <td class="py-2 px-3">${ev.email}</td>
-                <td class="py-2 px-3">${paket ? paket.nama : '-'}</td>
-                <td class="py-2 px-3">Rp${harga.toLocaleString('id-ID')}</td>
-                <td class="py-2 px-3">${ev.photos.length}</td>
-                <td class="py-2 px-3">Rp${pendapatan.toLocaleString('id-ID')}</td>
+              <tr class="align-top">
+                <td class="py-3 px-3">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Event</span>
+                  ${ev.name}
+                </td>
+                <td class="py-3 px-3 break-all">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Email</span>
+                  ${ev.email}
+                </td>
+                <td class="py-3 px-3">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Paket</span>
+                  ${paket ? paket.nama : '-'}
+                </td>
+                <td class="py-3 px-3 whitespace-nowrap">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Harga</span>
+                  Rp${harga.toLocaleString('id-ID')}
+                </td>
+                <td class="py-3 px-3">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Jumlah Foto</span>
+                  ${ev.photos.length}
+                </td>
+                <td class="py-3 px-3 whitespace-nowrap">
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Pendapatan</span>
+                  Rp${pendapatan.toLocaleString('id-ID')}
+                </td>
               </tr>
             `;
           });
@@ -169,45 +195,59 @@
         }
       }
       // Generate token otomatis (minimal 10 karakter alfanumerik)
-      document.getElementById('generate-token').addEventListener('click', function() {
-        const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-        let token = '';
-        for(let i=0; i<10; i++) token += chars.charAt(Math.floor(Math.random()*chars.length));
-        document.getElementById('token').value = token;
-      });
+      const genBtn = document.getElementById('generate-token');
+      if (genBtn) {
+        genBtn.addEventListener('click', function() {
+          const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+          let token = '';
+          for(let i=0; i<10; i++) token += chars.charAt(Math.floor(Math.random()*chars.length));
+          const tokenInput = document.getElementById('token');
+          if (tokenInput) tokenInput.value = token;
+        });
+      }
       // Upload event
-      document.getElementById('upload-form').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const name = document.getElementById('event-name').value.trim();
-        const email = document.getElementById('event-email').value.trim();
-        const token = document.getElementById('token').value.trim();
-        const files = document.getElementById('event-photos').files;
-        if(!name || !email || !token || files.length===0) {
-          alert('Semua field dan foto wajib diisi!');
-          return;
-        }
-        const photos = [];
-        for(let i=0; i<files.length; i++) {
-          photos.push(files[i].name); // hanya simpan nama file, bukan file asli
-        }
-        const events = getEvents();
-        events.push({ name, email, token, photos });
-        saveEvents(events);
-        renderEvents();
-        this.reset();
-      });
+      const uploadForm = document.getElementById('upload-form');
+      if (uploadForm) {
+        uploadForm.addEventListener('submit', function(e) {
+          e.preventDefault();
+          const nameInput = document.getElementById('event-name');
+          const emailInput = document.getElementById('event-email');
+          const tokenInput = document.getElementById('token');
+          const photosInput = document.getElementById('event-photos');
+          const name = nameInput ? nameInput.value.trim() : '';
+          const email = emailInput ? emailInput.value.trim() : '';
+          const token = tokenInput ? tokenInput.value.trim() : '';
+          const files = photosInput ? photosInput.files : [];
+          if(!name || !email || !token || !files || files.length===0) {
+            alert('Semua field dan foto wajib diisi!');
+            return;
+          }
+          const photos = [];
+          for(let i=0; i<files.length; i++) {
+            photos.push(files[i].name); // hanya simpan nama file, bukan file asli
+          }
+          const events = getEvents();
+          events.push({ name, email, token, photos });
+          saveEvents(events);
+          renderEvents();
+          this.reset();
+        });
+      }
       // Event delegation untuk tombol lihat & hapus
-      document.getElementById('event-list').addEventListener('click', function(e) {
-        const btn = e.target.closest('button');
-        if(!btn) return;
-        const idx = btn.getAttribute('data-idx');
-        const action = btn.getAttribute('data-action');
-        if(action === 'hapus') {
-          deleteEvent(Number(idx));
-        } else if(action === 'lihat') {
-          alert('Fitur lihat belum tersedia');
-        }
-      });
+      const eventList = document.getElementById('event-list');
+      if (eventList) {
+        eventList.addEventListener('click', function(e) {
+          const btn = e.target.closest('button');
+          if(!btn) return;
+          const idx = btn.getAttribute('data-idx');
+          const action = btn.getAttribute('data-action');
+          if(action === 'hapus') {
+            deleteEvent(Number(idx));
+          } else if(action === 'lihat') {
+            alert('Fitur lihat belum tersedia');
+          }
+        });
+      }
       // Inisialisasi
       renderEvents();
     });
