--- a/contact.html
+++ b/contact.html
@@ -13,20 +13,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body class="font-poppins bg-white text-gray-800 flex flex-col min-h-screen">
-  <header class="bg-gradient-to-r from-blue-100 via-white to-blue-100 shadow-lg border-b-2 border-primary">
-    <div class="max-w-7xl mx-auto flex justify-between items-center p-6">
-      <a href="home.html">
-        <img src="assets/logo.png" class="h-20 drop-shadow-lg transition-transform duration-300 hover:scale-105" alt="Logo">
-      </a>
-      <nav>
-        <ul class="flex gap-6 font-semibold text-lg">
-          <li><a href="home.html" class="hover:text-primary transition-colors">Home</a></li>
-          <li><a href="product.html" class="hover:text-primary transition-colors">Product</a></li>
-          <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
-          <li><a href="contact.html" class="text-primary underline underline-offset-4">Contact</a></li>
-          <li><a href="login.html" class="hover:text-primary transition-colors">Login</a></li>
-        </ul>
-      </nav>
+  <header class="bg-gradient-to-r from-gray-100 via-white to-gray-100 shadow-lg border-b border-gray-200 sticky top-0 z-50 backdrop-blur-sm">
+    <div class="max-w-7xl mx-auto p-2 md:p-3">
+      <div class="flex items-center justify-between">
+        <a href="home.html#home" class="flex items-center gap-2">
+          <img src="assets/Logo.png" class="h-16 md:h-20 drop-shadow-lg transition-transform duration-300 hover:scale-105" alt="Logo">
+          <span class="hidden sm:inline font-extrabold text-primary">Bafoto Booth</span>
+        </a>
+        <button id="nav-toggle" class="md:hidden inline-flex items-center justify-center p-2 rounded border border-primary text-primary hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+        <nav id="nav-menu" class="hidden md:block mt-2 md:mt-0">
+          <ul class="flex flex-col md:flex-row md:gap-2 lg:gap-3 font-semibold text-xs md:text-sm border-t pt-2 md:border-0 md:pt-0">
+            <li class="py-0.5 md:py-0"><a href="home.html#home" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">Home</a></li>
+            <li class="py-0.5 md:py-0"><a href="home.html#product" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">Product</a></li>
+            <li class="py-0.5 md:py-0"><a href="home.html#about" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">About</a></li>
+            <li class="py-0.5 md:py-0"><a href="home.html#contact" class="text-primary underline underline-offset-4 block px-2 py-1.5 rounded-lg hover:bg-gray-100">Contact</a></li>
+            <li class="py-0.5 md:py-0"><a href="login.html" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">Login</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
@@ -43,7 +51,7 @@
     </form>
   </main>
 
-  <footer class="bg-gradient-to-r from-blue-100 via-white to-blue-100 text-center py-6 mt-auto border-t-2 border-primary shadow-inner">
+  <footer class="bg-gradient-to-r from-gray-100 via-white to-gray-100 text-center py-6 mt-auto border-t-2 border-gray-200 shadow-inner">
     <span class="font-semibold text-primary">&copy; 2025 Bafoto Booth</span>
   </footer>
   <script src="script.js"></script>
