--- a/preview.html
+++ b/preview.html
@@ -18,52 +18,106 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body class="font-poppins bg-white text-gray-800 flex flex-col min-h-screen">
-  <header class="bg-gradient-to-r from-blue-100 via-white to-blue-100 shadow-lg border-b-2 border-primary">
-    <div class="max-w-7xl mx-auto flex justify-between items-center p-6">
-      <a href="home.html">
-        <img src="assets/logo.png" class="h-20 drop-shadow-lg transition-transform duration-300 hover:scale-105" alt="Logo">
-      </a>
-      <nav>
-        <ul class="flex gap-6 font-semibold text-lg">
-          <li><a href="home.html" class="hover:text-primary transition-colors">Home</a></li>
-          <li><a href="product.html" class="hover:text-primary transition-colors">Product</a></li>
-          <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
-          <li><a href="contact.html" class="hover:text-primary transition-colors">Contact</a></li>
-          <li><a href="login.html" class="hover:text-primary transition-colors">Logout</a></li>
-        </ul>
-      </nav>
+  <header class="bg-gradient-to-r from-gray-100 via-white to-gray-100 shadow-lg border-b border-gray-200 sticky top-0 z-50 backdrop-blur-sm">
+    <div class="max-w-7xl mx-auto p-2 md:p-3">
+      <div class="flex items-center justify-between">
+        <a href="home.html#home" class="flex items-center gap-2">
+          <img src="assets/Logo.png" class="h-16 md:h-20 drop-shadow-lg transition-transform duration-300 hover:scale-105" alt="Logo">
+          <span class="hidden sm:inline font-extrabold text-primary">Bafoto Booth</span>
+        </a>
+        <button id="nav-toggle" class="md:hidden inline-flex items-center justify-center p-2 rounded border border-primary text-primary hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+        <nav id="nav-menu" class="hidden md:block mt-2 md:mt-0">
+          <ul class="flex flex-col md:flex-row md:gap-2 lg:gap-3 font-semibold text-xs md:text-sm border-t pt-2 md:border-0 md:pt-0">
+            <li class="py-0.5 md:py-0"><a href="login.html" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">Logout</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
-  <main class="flex-grow max-w-5xl mx-auto px-4 py-12">
-    <h1 class="text-4xl font-extrabold text-primary mb-8 text-center drop-shadow">Preview & Download Foto</h1>
-    <div class="bg-white rounded-2xl shadow-xl border border-blue-100 p-8">
-      <h2 class="text-2xl font-bold mb-6 text-primary text-center">Event: Wedding A</h2>
-      <div class="grid md:grid-cols-4 sm:grid-cols-2 gap-6">
+  <main class="flex-grow max-w-6xl mx-auto px-4 py-8 md:py-12">
+    <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3 mb-6">
+      <h1 class="text-3xl md:text-4xl font-extrabold text-primary drop-shadow">Preview & Download Foto</h1>
+      <div class="flex items-center gap-3 self-start md:self-auto">
+        <button id="btn-download-all" class="inline-flex items-center gap-2 bg-primary text-white px-4 py-2 rounded-xl hover:bg-blue-700 transition font-semibold shadow">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5m0 0l5-5m-5 5V4"/></svg>
+          Download Semua
+        </button>
+      </div>
+    </div>
+    <div class="bg-white rounded-2xl shadow-xl border border-gray-200 p-4 md:p-8">
+      <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 text-primary text-center">Nama Client : Rizqia Febriannor </h2>
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 md:gap-6">
         <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
-          <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=300&q=80" alt="Foto 1" class="rounded-lg mb-2 w-full h-40 object-cover group-hover:scale-105 transition-transform">
-          <a href="#" download class="bg-primary text-white px-4 py-1 rounded hover:bg-blue-700 transition text-sm font-semibold">Download</a>
+          <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=300&q=80" alt="Foto 1" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
         </div>
         <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
-          <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=300&q=80" alt="Foto 2" class="rounded-lg mb-2 w-full h-40 object-cover group-hover:scale-105 transition-transform">
-          <a href="#" download class="bg-primary text-white px-4 py-1 rounded hover:bg-blue-700 transition text-sm font-semibold">Download</a>
+          <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=300&q=80" alt="Foto 2" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
         </div>
         <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
-          <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=300&q=80" alt="Foto 3" class="rounded-lg mb-2 w-full h-40 object-cover group-hover:scale-105 transition-transform">
-          <a href="#" download class="bg-primary text-white px-4 py-1 rounded hover:bg-blue-700 transition text-sm font-semibold">Download</a>
+          <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=300&q=80" alt="Foto 3" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
         </div>
         <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
-          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-40 object-cover group-hover:scale-105 transition-transform">
-          <a href="#" download class="bg-primary text-white px-4 py-1 rounded hover:bg-blue-700 transition text-sm font-semibold">Download</a>
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
+        </div>
+        <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
+        </div>
+        <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
+        </div>
+        <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
+        </div>
+        <div class="flex flex-col items-center bg-blue-50 rounded-xl p-3 shadow group">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Foto 4" class="rounded-lg mb-2 w-full h-32 md:h-40 object-cover group-hover:scale-105 transition-transform">
+          <a href="#" download class="bg-primary text-white px-3 md:px-4 py-1 rounded hover:bg-blue-700 transition text-xs md:text-sm font-semibold">Download</a>
         </div>
         <!-- Tambahkan foto lain di sini -->
       </div>
     </div>
   </main>
 
-  <footer class="bg-gradient-to-r from-blue-100 via-white to-blue-100 text-center py-6 mt-auto border-t-2 border-primary shadow-inner">
+  <footer class="bg-gradient-to-r from-gray-100 via-white to-gray-100 text-center py-6 mt-auto border-t-2 border-gray-200 shadow-inner">
     <span class="font-semibold text-primary">&copy; 2025 Bafoto Booth</span>
   </footer>
+  <!-- Lightbox Modal -->
+  <div id="lightbox" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50 p-4">
+    <img id="lightbox-img" src="" alt="Foto" class="max-h-[90vh] max-w-[90vw] rounded-lg shadow-2xl">
+  </div>
+  <script>
+    // Lightbox sederhana untuk preview.gambar
+    document.addEventListener('DOMContentLoaded', () => {
+      const imgs = document.querySelectorAll('.grid img');
+      const box = document.getElementById('lightbox');
+      const boxImg = document.getElementById('lightbox-img');
+      imgs.forEach(img => img.addEventListener('click', () => {
+        boxImg.src = img.src;
+        box.classList.remove('hidden');
+        box.classList.add('flex');
+      }));
+      const closeBox = () => {
+        box.classList.add('hidden');
+        box.classList.remove('flex');
+        boxImg.src = '';
+      };
+      box.addEventListener('click', closeBox);
+      document.addEventListener('keydown', (e) => { if(e.key === 'Escape') closeBox(); });
+      const downloadAll = document.getElementById('btn-download-all');
+      if(downloadAll){ downloadAll.addEventListener('click', () => alert('Fitur Download Semua akan menyiapkan arsip ZIP (coming soon).')); }
+    });
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
