--- a/uploadevent.html
+++ b/uploadevent.html
@@ -17,10 +17,10 @@
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body class="font-poppins bg-white text-gray-800 flex min-h-screen">
-  <aside class="w-64 bg-gradient-to-b from-blue-900 to-blue-600 text-white flex flex-col py-8 px-6 min-h-screen shadow-lg">
+<body class="font-poppins bg-white text-gray-800 flex min-h-screen text-[15px] md:text-base">
+  <aside id="sidebar" class="w-64 bg-gradient-to-b from-gray-800 to-gray-600 text-white flex flex-col py-8 px-6 min-h-screen shadow-lg fixed md:static inset-y-0 left-0 transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50 rounded-r-2xl md:rounded-none">
     <div class="flex flex-col items-center mb-10">
-      <img src="assets/logo.png" class="h-24 mb-4 drop-shadow-lg" alt="Logo">
+  <img src="assets/Logo.png" class="h-28 mb-4 drop-shadow-lg" alt="Logo">
       <span class="font-extrabold text-xl tracking-wide">Bafoto Admin</span>
     </div>
     <nav class="flex-1">
@@ -33,26 +33,44 @@
     </nav>
     <div class="mt-10 text-xs text-blue-100 text-center">&copy; 2025 Bafoto Booth</div>
   </aside>
-  <div class="flex-1 flex flex-col min-h-screen bg-blue-50">
-    <header class="bg-white shadow flex items-center px-8 h-20 border-b-2 border-primary">
-      <h1 class="text-3xl font-extrabold text-primary drop-shadow flex-1">Upload Foto Event</h1>
+  <div id="sidebar-overlay" class="fixed inset-0 bg-black/40 hidden md:hidden z-40"></div>
+  <div class="flex-1 flex flex-col min-h-screen bg-gray-50 md:ml-64">
+    <header class="bg-white shadow flex items-center px-4 md:px-8 h-16 md:h-20 border-b-2 border-gray-200 gap-3 rounded-b-2xl md:rounded-none">
+      <button id="sidebar-toggle" class="md:hidden inline-flex items-center justify-center p-2 rounded border border-primary text-primary hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Toggle sidebar">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <h1 class="text-2xl md:text-3xl font-extrabold text-primary drop-shadow flex-1">Upload Foto Event</h1>
     </header>
-    <main class="flex-grow px-8 py-10 flex justify-center items-start">
-      <section class="bg-white rounded-2xl shadow-xl border border-blue-100 p-8 flex flex-col items-center w-full max-w-lg">
+    <main class="flex-grow px-4 md:px-8 py-6 md:py-10 flex justify-center items-start">
+      <section class="bg-white rounded-2xl shadow-xl border border-blue-100 p-6 md:p-8 flex flex-col items-center w-full max-w-lg">
         <form id="upload-form" class="w-full space-y-4">
-          <input type="text" id="event-name" placeholder="Nama Event" class="border w-full px-4 py-2 rounded focus:outline-primary">
-          <input type="email" id="event-email" placeholder="Email" class="border w-full px-4 py-2 rounded focus:outline-primary">
-          <select id="event-paket" class="border w-full px-4 py-2 rounded focus:outline-primary">
+          <label class="block text-sm font-semibold mb-1" for="event-name">Nama Event</label>
+          <input type="text" id="event-name" placeholder="Masukkan nama event" required class="border w-full px-4 py-3 rounded focus:outline-primary" autocomplete="off">
+
+          <label class="block text-sm font-semibold mb-1" for="event-email">Email</label>
+          <input type="email" id="event-email" placeholder="nama@email.com" required class="border w-full px-4 py-3 rounded focus:outline-primary">
+
+          <label class="block text-sm font-semibold mb-1" for="event-paket">Pilih Paket</label>
+          <select id="event-paket" required class="border w-full px-4 py-3 rounded focus:outline-primary">
             <option value="paket1">Paket 1 - Rp. 15.000</option>
             <option value="paket2">Paket 2 - Rp. 20.000</option>
             <option value="paket3">Paket 3 - Rp. 30.000</option>
           </select>
           <div class="flex gap-2">
-            <input type="text" id="token" placeholder="Token Event" class="border flex-1 px-4 py-2 rounded focus:outline-primary">
-            <button type="button" id="generate-token" class="bg-primary text-white px-4 py-2 rounded hover:bg-blue-700 transition font-bold">Generate</button>
+            <div class="flex-1">
+              <label class="block text-sm font-semibold mb-1" for="token">Token Event</label>
+              <input type="text" id="token" placeholder="Otomatis atau input manual" required class="border w-full px-4 py-3 rounded focus:outline-primary" minlength="6" maxlength="20">
+            </div>
+            <div class="pt-6">
+              <button type="button" id="generate-token" class="bg-primary text-white px-4 py-3 rounded hover:bg-blue-700 transition font-bold whitespace-nowrap">Generate</button>
+            </div>
           </div>
-          <input type="file" id="event-photos" multiple class="border w-full px-4 py-2 rounded focus:outline-primary">
-          <button type="submit" class="bg-primary text-white px-6 py-2 rounded hover:bg-blue-700 transition w-full font-bold">Upload</button>
+          <label class="block text-sm font-semibold mb-1" for="event-photos">Upload Foto</label>
+          <input type="file" id="event-photos" multiple required accept="image/*" class="border w-full px-4 py-3 rounded focus:outline-primary">
+          <p class="text-xs text-gray-500 -mt-1">Pilih beberapa foto sekaligus (JPG/PNG). Total maksimal disarankan 25MB.</p>
+          <button type="submit" class="bg-primary text-white px-6 py-3 rounded hover:bg-blue-700 transition w-full font-bold">Upload</button>
         </form>
       </section>
     </main>
